# ninobyte

./: .editorconfig  .gitignore  LICENSE  README.md  SECURITY.md  pytest.ini  requirements-test.txt
.claude-plugin/: marketplace.json  products
.github/workflows/: ci.yml  release.yml
docs/: GOVERNANCE_VERSIONING.md  claude_code_plugin_runbook.md
docs/adr/: 0001-claude-operating-system.md  ADR-20251223-025526-adr-evidence-receipts-and-cross-link-governance.md  README.md  TEMPLATE.md
docs/architecture/: ADR_TEMPLATE.md  THREAT_MODEL.md
docs/canonical/: CHANGELOG.md  COMPATIBILITY_MATRIX.md  PINNED_PROJECT_PROMPT.md  PROJECT_INSTRUCTIONS.md  TAGGING_POLICY.md  VALIDATION_LOG.md  VERTICAL_PLAYBOOK_v2_FINAL.md
docs/distribution/: DISTRIBUTION_AND_DISCOVERY.md
docs/status/: NEXT_SPRINT_PLAN.md  PROJECT_STATUS_REPORT.md  ROADMAP_GAP_ANALYSIS.md  VERTICAL_ALIGNMENT_SCORECARD.md
docs/tutorials/: install-claude-code.md  install-claude-project.md
marketplace/: marketplace.json
marketplace/listings/: README.md
marketplace/qa/: QA_CHECKLIST.md
ops/evidence/: INDEX.canonical.json  INDEX.canonical.json.sha256  INDEX.json  README.md  issue_0008_windows_blocked_patterns.md  ninobyte-airgap_v0.2.0_verification.md
ops/release/: RELEASE_CHECKLIST.md  RELEASE_GATE.md
ops/runbooks/: DAILY_WORKFLOW.md  README.md  VIBE_PILOT_RUNBOOK.md  git_setup.md
products/claude-code-plugins/: README.md
products/compliancepack/: README.md  SECURITY.md  pyproject.toml
products/compliancepack/packs/: pii.v1.json  secrets.v1.json
products/compliancepack/src/compliancepack/: __init__.py  __main__.py  cli.py  engine.py  model.py  packs.py  policy.py  redact.py  sariflite.py  scanner.py  threshold.py
products/compliancepack/tests/: test_cli_enforcement.py  test_cli_smoke.py  test_contract_non_goals.py  test_determinism.py  test_directory_scan.py  test_engine_matching.py  test_packs.py  test_policy_loader.py  test_repo_root_contract.py  test_sariflite.py  test_scanner.py  test_threshold.py
products/compliancepack/tests/fixtures/: policy_v1.json  sample_input.txt
products/compliancepack/tests/fixtures/scan_tree/: clean.txt  config.env
products/compliancepack/tests/fixtures/scan_tree/subdir/: another.txt  secrets.logfile
products/context-cleaner/: README.md  SECURITY.md  pyproject.toml
products/context-cleaner/scripts/: contract_snapshot_check.py  jsonl_consumer_check.py  smoke_context_cleaner.py
products/context-cleaner/src/ninobyte_context_cleaner/: __init__.py  __main__.py  lexicon.py  lexicon_map.py  pdf_extractor.py  redactor.py  table_normalizer.py  version.py
products/context-cleaner/tests/: __init__.py  test_cli_ux.py  test_io_adapters.py  test_jsonl_schema_v1.py  test_lexicon.py  test_lexicon_map.py  test_pdf_extraction.py  test_redactor_golden.py  test_smoke_script_contract.py  test_table_normalizer.py
products/context-cleaner/tests/fixtures/invalid_csv_pack/: entries.csv  pack.json
products/context-cleaner/tests/fixtures/invalid_pack_schema/: pack.json
products/context-cleaner/tests/goldens/: contract_snapshot_expected.jsonl  contract_snapshot_input.txt  file_input_expected.txt  file_input_sample.txt  jsonl_output_expected.json  lexicon_map_expected.json  lexicon_map_input.txt  lexicon_stdin_input.txt  overlap_lexicon.json  pii_expected.txt  pii_input.txt  sample_contact_expected.txt  schema_v1_file_expected.jsonl  schema_v1_lexicon_expected.jsonl  schema_v1_stdin_expected.jsonl  table_csv_expected.txt  table_csv_input.txt  table_pipe_expected.txt  table_pipe_input.txt  table_tsv_expected.txt  table_tsv_input.txt  test_lexicon.json
products/lexicon-packs/: README.md  SECURITY.md  pyproject.toml
products/lexicon-packs/packs/ghana-core/: README.md  entries.csv  pack.json  pack.lock.json
products/lexicon-packs/packs/ghana-schools-core/: entries.csv  pack.json  pack.lock.json
products/lexicon-packs/src/lexicon_packs/: __init__.py  __main__.py  canonicalize.py  cli.py  discover.py  load.py  lockfile.py  schema.py  validate.py
products/lexicon-packs/tests/: __init__.py  conftest.py  test_determinism.py  test_discover.py  test_load_pack.py  test_lockfile.py  test_validate_pack.py
products/lexicon-packs/tests/fixtures/invalid_csv/: entries.csv  pack.json
products/lexicon-packs/tests/fixtures/invalid_schema/: pack.json
products/lexicon-packs/tests/fixtures/minimal_pack/: entries.csv  pack.json
products/mcp-servers/: README.md
products/netopspack/: README.md  SECURITY.md  pyproject.toml
products/netopspack/src/netopspack/: __init__.py  __main__.py  cli.py  diagnose.py  model.py  redact.py
products/netopspack/src/netopspack/parsers/: __init__.py  haproxy.py  nginx.py  syslog.py
products/netopspack/tests/: __init__.py  test_cli_smoke.py  test_contract_non_goals.py  test_determinism.py  test_leakage_blocker.py  test_parsers.py  test_redaction.py  test_signals.py
products/netopspack/tests/fixtures/: .gitignore
products/opspack/: README.md  SECURITY.md  pyproject.toml
products/opspack/docs/: INTERFACE_CONTRACT.md  ROADMAP.md  THREAT_MODEL.md
products/opspack/src/ninobyte_opspack/: __init__.py  __main__.py  cli.py  triage.py  version.py
products/opspack/src/opspack/: __init__.py  __main__.py  cli.py  model.py  redact.py
products/opspack/tests/: __init__.py  conftest.py  test_cli_smoke.py  test_determinism.py  test_incident_triage.py  test_no_network_shell.py  test_redaction_ip.py  test_redaction_tokens.py  test_structure.py
products/opspack/tests/fixtures/: incident_security_breach.json  incident_service_degradation.json
products/opspack/tests/goldens/: incident_security_breach_expected.json  incident_service_degradation_expected.json
scripts/ci/: validate_adr_links.py  validate_artifacts.py  validate_compliancepack.py  validate_evidence_index.py  validate_evidence_integrity.py  validate_lexicon_packs_lockfiles.py  validate_netopspack.py  validate_no_os_artifacts.py  validate_validation_log_links.py
scripts/ops/: build_evidence_index.py  canonicalize_json.py  capture_pr_merge_receipt.py  closeout.sh  evidence_contract_check.py  (+7 more)
(+141 files in other folders)
