[project]
name = "ninobyte-lexicon-packs"
version = "0.1.0"
description = "Deterministic, validated vocabulary packs for domain-specific terminology"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Isaac Nortey" }
]
keywords = ["lexicon", "vocabulary", "terminology", "packs", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]

# No runtime dependencies (pure stdlib)
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
ninobyte-lexicon-packs = "lexicon_packs.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
